<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_notification"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:hint="@string/title_here"
        android:inputType="textPersonName"
        android:text="@string/upcoming_activity"
        android:ems="10"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContent"
        android:hint="@string/content"
        android:inputType="textPersonName"
        android:text="@string/upcoming_activity_name"
        android:ems="10"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="10dp" />

</LinearLayout>